Removed resetElapsed()
