# pb/distance_server.pb.go
@@ -147,7 +147,6 @@ type DistanceServerClient interface {
     RegisterClient(ctx context.Context, in *ClientInfo, opts ...grpc.CallOption) (*ServerInfo, error)
     GetDistances(ctx context.Context, in *ClientInfo, opts ...grpc.CallOption) (DistanceServer_GetDistancesClient, error)
     GetDistance(ctx context.Context, in *google_protobuf1.Empty, opts ...grpc.CallOption) (*Distance, error)
-    ResetElapsed(ctx context.Context, in *google_protobuf1.Empty, opts ...grpc.CallOption) (*google_protobuf1.Empty, error)
 }
 
 type distanceServerClient struct {
@@ -208,22 +207,12 @@ func (c *distanceServerClient) GetDistance(ctx context.Context, in *google_proto
     return out, nil
 }
 
-func (c *distanceServerClient) ResetElapsed(ctx context.Context, in *google_protobuf1.Empty, opts ...grpc.CallOption) (*google_protobuf1.Empty, error) {
-    out := new(google_protobuf1.Empty)
-    err := grpc.Invoke(ctx, "/distance_server.DistanceServer/resetElapsed", in, out, c.cc, opts...)
-    if err != nil {
-        return nil, err
-    }
-    return out, nil
-}
-
 // Server API for DistanceServer service
 
 type DistanceServerServer interface {
     RegisterClient(context.Context, *ClientInfo) (*ServerInfo, error)
     GetDistances(*ClientInfo, DistanceServer_GetDistancesServer) error
     GetDistance(context.Context, *google_protobuf1.Empty) (*Distance, error)
-    ResetElapsed(context.Context, *google_protobuf1.Empty) (*google_protobuf1.Empty, error)
 }
 
 func RegisterDistanceServerServer(s *grpc.Server, srv DistanceServerServer) {
@@ -287,24 +276,6 @@ func _DistanceServer_GetDistance_Handler(srv interface{}, ctx context.Context, d
     return interceptor(ctx, in, info, handler)
 }
 
-func _DistanceServer_ResetElapsed_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-    in := new(google_protobuf1.Empty)
-    if err := dec(in); err != nil {
-        return nil, err
-    }
-    if interceptor == nil {
-        return srv.(DistanceServerServer).ResetElapsed(ctx, in)
-    }
-    info := &grpc.UnaryServerInfo{
-        Server:     srv,
-        FullMethod: "/distance_server.DistanceServer/ResetElapsed",
-    }
-    handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-        return srv.(DistanceServerServer).ResetElapsed(ctx, req.(*google_protobuf1.Empty))
-    }
-    return interceptor(ctx, in, info, handler)
-}
-
 var _DistanceServer_serviceDesc = grpc.ServiceDesc{
     ServiceName: "distance_server.DistanceServer",
     HandlerType: (*DistanceServerServer)(nil),
@@ -316,10 +287,6 @@ var _DistanceServer_serviceDesc = grpc.ServiceDesc{
         {
             MethodName: "getDistance",
             Handler:    _DistanceServer_GetDistance_Handler,
-        },
-        {
-            MethodName: "resetElapsed",
-            Handler:    _DistanceServer_ResetElapsed_Handler,
         },
     },
     Streams: []grpc.StreamDesc{
@@ -337,26 +304,24 @@ func init() {
 }
 
 var fileDescriptor0 = []byte{
-    // 326 bytes of a gzipped FileDescriptorProto
-    0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x91, 0x4f, 0x4e, 0xf3, 0x30,
-    0x10, 0xc5, 0xbf, 0xb8, 0xfd, 0xa0, 0x0c, 0x25, 0x45, 0x23, 0x40, 0x26, 0x65, 0x51, 0x65, 0xd5,
-    0x55, 0xc2, 0x9f, 0x23, 0x40, 0x17, 0x48, 0xac, 0x8a, 0x84, 0xd8, 0x95, 0x94, 0x4c, 0x23, 0x4b,
-    0xc5, 0x8e, 0x6c, 0x53, 0x89, 0x2d, 0x57, 0xe0, 0x68, 0x5c, 0x81, 0x0b, 0x70, 0x03, 0x14, 0xa7,
-    0x6e, 0xab, 0x56, 0xed, 0xce, 0x33, 0x6f, 0xfc, 0x1b, 0x3f, 0x3f, 0xe0, 0xe5, 0x38, 0xcd, 0x85,
-    0xb1, 0x99, 0x7c, 0xa5, 0x91, 0x21, 0x3d, 0x23, 0x9d, 0x94, 0x5a, 0x59, 0x85, 0x9d, 0xb5, 0x76,
-    0x74, 0x51, 0x28, 0x55, 0x4c, 0x29, 0xcd, 0x4a, 0x91, 0x66, 0x52, 0x2a, 0x9b, 0x59, 0xa1, 0xa4,
-    0xa9, 0xc7, 0xa3, 0xee, 0x5c, 0x75, 0xd5, 0xf8, 0x7d, 0x92, 0xd2, 0x5b, 0x69, 0x3f, 0x6a, 0x31,
-    0xee, 0x01, 0xdc, 0x4e, 0x05, 0x49, 0x7b, 0x2f, 0x27, 0x0a, 0x11, 0x9a, 0x42, 0x4e, 0x14, 0x0f,
-    0x7a, 0x41, 0xff, 0x60, 0xe8, 0xce, 0xd5, 0xc4, 0xa3, 0x5b, 0xb3, 0x75, 0xe2, 0x05, 0x5a, 0x77,
-    0xf3, 0x17, 0x61, 0x08, 0x4c, 0xe4, 0x4e, 0xfd, 0x3f, 0x64, 0x22, 0xaf, 0x6a, 0x6b, 0x38, 0xeb,
-    0x05, 0xfd, 0xc6, 0x90, 0x59, 0x83, 0x1c, 0xf6, 0x69, 0x9a, 0x95, 0x86, 0x72, 0xde, 0x70, 0x4d,
-    0x5f, 0x62, 0x04, 0x2d, 0xef, 0x8b, 0x37, 0xdd, 0xfd, 0x45, 0x7d, 0xfd, 0xcb, 0x20, 0xf4, 0x2b,
-    0xea, 0xc7, 0xe0, 0x03, 0x84, 0x9a, 0x0a, 0x61, 0x2c, 0xe9, 0xda, 0x00, 0x76, 0x93, 0xf5, 0xef,
-    0x5a, 0x3a, 0x8b, 0x36, 0xc5, 0xa5, 0xa9, 0xf8, 0x1f, 0x8e, 0xa0, 0x5d, 0x90, 0xf5, 0x2b, 0xcc,
-    0x6e, 0xd6, 0xf9, 0x86, 0xe8, 0x2f, 0xc6, 0xa7, 0x9f, 0xdf, 0x3f, 0x5f, 0xac, 0x83, 0x47, 0xe9,
-    0xec, 0x6a, 0x91, 0x9e, 0xb9, 0x0c, 0xf0, 0x09, 0x0e, 0x57, 0x16, 0xe0, 0x59, 0x52, 0x87, 0x92,
-    0xf8, 0x50, 0x92, 0x41, 0x15, 0xca, 0x2e, 0xf4, 0x89, 0x43, 0x87, 0xd8, 0x5e, 0x45, 0xe3, 0x33,
-    0xb4, 0x35, 0x19, 0xb2, 0x83, 0xf9, 0x2f, 0x6e, 0x03, 0x6f, 0xe9, 0xc7, 0xdc, 0x51, 0x11, 0x8f,
-    0x2b, 0xea, 0x2a, 0x69, 0xbc, 0xe7, 0x26, 0x6f, 0xfe, 0x02, 0x00, 0x00, 0xff, 0xff, 0x18, 0x72,
-    0x85, 0x69, 0x88, 0x02, 0x00, 0x00,
+    // 301 bytes of a gzipped FileDescriptorProto
+    0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x51, 0xcd, 0x4e, 0xf3, 0x30,
+    0x10, 0xfc, 0xe2, 0xf6, 0x83, 0xb2, 0x94, 0x54, 0x5a, 0x01, 0x32, 0x29, 0x87, 0x2a, 0xa7, 0x9e,
+    0x12, 0x7e, 0x1e, 0x01, 0x38, 0x20, 0x71, 0x0a, 0x12, 0xd7, 0x92, 0x90, 0x4d, 0x64, 0x29, 0xd8,
+    0x51, 0x6c, 0x2a, 0x71, 0xe5, 0x15, 0x38, 0xf0, 0x60, 0xbc, 0x02, 0x0f, 0x82, 0xe2, 0xd4, 0x6d,
+    0xd5, 0x8a, 0xde, 0x32, 0x9e, 0xdd, 0x99, 0x9d, 0x0c, 0xf0, 0x3a, 0x8b, 0x73, 0xa1, 0x4d, 0x2a,
+    0x5f, 0x68, 0xa6, 0xa9, 0x99, 0x53, 0x13, 0xd5, 0x8d, 0x32, 0x0a, 0x47, 0x1b, 0xcf, 0xc1, 0x79,
+    0xa9, 0x54, 0x59, 0x51, 0x9c, 0xd6, 0x22, 0x4e, 0xa5, 0x54, 0x26, 0x35, 0x42, 0x49, 0xdd, 0x8d,
+    0x07, 0xe3, 0x05, 0x6b, 0x51, 0xf6, 0x56, 0xc4, 0xf4, 0x5a, 0x9b, 0xf7, 0x8e, 0x0c, 0x27, 0x00,
+    0x37, 0x95, 0x20, 0x69, 0xee, 0x65, 0xa1, 0x10, 0xa1, 0x2f, 0x64, 0xa1, 0xb8, 0x37, 0xf1, 0xa6,
+    0x07, 0x89, 0xfd, 0x6e, 0x27, 0x1e, 0xad, 0xcd, 0x9f, 0x13, 0xcf, 0x30, 0xb8, 0x5d, 0x5c, 0x84,
+    0x3e, 0x30, 0x91, 0x5b, 0xf6, 0x7f, 0xc2, 0x44, 0xde, 0x62, 0xa3, 0x39, 0x9b, 0x78, 0xd3, 0x5e,
+    0xc2, 0x8c, 0x46, 0x0e, 0xfb, 0x54, 0xa5, 0xb5, 0xa6, 0x9c, 0xf7, 0xec, 0xa3, 0x83, 0x18, 0xc0,
+    0xc0, 0xe5, 0xe2, 0x7d, 0xbb, 0xbf, 0xc4, 0x57, 0x5f, 0x0c, 0x7c, 0x67, 0xd1, 0x1d, 0x83, 0x0f,
+    0xe0, 0x37, 0x54, 0x0a, 0x6d, 0xa8, 0xe9, 0x02, 0xe0, 0x38, 0xda, 0xfc, 0x5d, 0xab, 0x64, 0xc1,
+    0x36, 0xb9, 0x0a, 0x15, 0xfe, 0xc3, 0x19, 0x0c, 0x4b, 0x32, 0xce, 0x42, 0xef, 0xd6, 0x3a, 0xdb,
+    0x22, 0xdd, 0x62, 0x78, 0xf2, 0xf1, 0xfd, 0xf3, 0xc9, 0x46, 0x78, 0x14, 0xcf, 0x2f, 0x97, 0xed,
+    0xe9, 0x0b, 0x0f, 0x9f, 0xe0, 0x70, 0xcd, 0x00, 0x4f, 0xa3, 0xae, 0x94, 0xc8, 0x95, 0x12, 0xdd,
+    0xb5, 0xa5, 0xec, 0x92, 0x3e, 0xb6, 0xd2, 0x3e, 0x0e, 0xd7, 0xa5, 0xb3, 0x3d, 0x2b, 0x70, 0xfd,
+    0x1b, 0x00, 0x00, 0xff, 0xff, 0x9b, 0x0f, 0x5f, 0x9b, 0x2e, 0x02, 0x00, 0x00,
 }
