# pb/distance_server.pb.gw.go
@@ -62,15 +62,6 @@ func request_DistanceServer_GetDistance_0(ctx context.Context, marshaler runtime
 
 }
 
-func request_DistanceServer_ResetElapsed_0(ctx context.Context, marshaler runtime.Marshaler, client DistanceServerClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-    var protoReq empty.Empty
-    var metadata runtime.ServerMetadata
-
-    msg, err := client.ResetElapsed(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-    return msg, metadata, err
-
-}
-
 // RegisterDistanceServerHandlerFromEndpoint is same as RegisterDistanceServerHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
 func RegisterDistanceServerHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
@@ -159,34 +150,6 @@ func RegisterDistanceServerHandler(ctx context.Context, mux *runtime.ServeMux, c
 
     })
 
-    mux.Handle("GET", pattern_DistanceServer_ResetElapsed_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-        ctx, cancel := context.WithCancel(ctx)
-        defer cancel()
-        if cn, ok := w.(http.CloseNotifier); ok {
-            go func(done <-chan struct{}, closed <-chan bool) {
-                select {
-                case <-done:
-                case <-closed:
-                    cancel()
-                }
-            }(ctx.Done(), cn.CloseNotify())
-        }
-        inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-        rctx, err := runtime.AnnotateContext(ctx, req)
-        if err != nil {
-            runtime.HTTPError(ctx, outboundMarshaler, w, req, err)
-        }
-        resp, md, err := request_DistanceServer_ResetElapsed_0(rctx, inboundMarshaler, client, req, pathParams)
-        ctx = runtime.NewServerMetadataContext(ctx, md)
-        if err != nil {
-            runtime.HTTPError(ctx, outboundMarshaler, w, req, err)
-            return
-        }
-
-        forward_DistanceServer_ResetElapsed_0(ctx, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-    })
-
     return nil
 }
 
@@ -194,14 +157,10 @@ var (
     pattern_DistanceServer_GetDistances_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "distances"}, ""))
 
     pattern_DistanceServer_GetDistance_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "distance"}, ""))
-
-    pattern_DistanceServer_ResetElapsed_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "resetElapsed"}, ""))
 )
 
 var (
     forward_DistanceServer_GetDistances_0 = runtime.ForwardResponseStream
 
     forward_DistanceServer_GetDistance_0 = runtime.ForwardResponseMessage
-
-    forward_DistanceServer_ResetElapsed_0 = runtime.ForwardResponseMessage
 )
