# swagger/distance_server.swagger.json
@@ -54,22 +54,6 @@
           "DistanceServer"
         ]
       }
-    },
-    "/v1/resetElapsed": {
-      "get": {
-        "operationId": "resetElapsed",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          }
-        },
-        "tags": [
-          "DistanceServer"
-        ]
-      }
     }
   },
   "definitions": {
